TRY-MM-65 FIXES - Bootstrap 'row' content wider than screen and causes horizontal scrolling
	[*] cheapgit/Styles/Main.css

--- a/cheapgit/Styles/Main.css
+++ b/cheapgit/Styles/Main.css
@@ -35,6 +35,9 @@
     margin: 0.7rem;
 }
 
+.row {
+    width:100%;
+}
 
 /*IMAGE BLOCKS*/
 .image-block {
